# verify-rust-std

./: .gitignore  README.md  rust-toolchain.toml
.github/workflows/: flux.yml  kani.yml  testable-simd-models.yml
doc/src/challenges/: 0001-core-transmutation.md  0002-intrinsics-memory.md  0005-linked-list.md  0010-string.md  0012-nonzero.md  0013-cstr.md  0015-intrinsics-simd.md  0022-str-iter.md
scripts/: run-kani.sh
scripts/kani-std-analysis/: metrics-data-core.json  metrics-data-std.json
testable-simd-models/: Cargo.toml  README.md
testable-simd-models/src/: core_arch.rs  helpers.rs  lib.rs
testable-simd-models/src/abstractions/: bit.rs  bitvec.rs  funarr.rs  mod.rs  simd.rs  utilities.rs
testable-simd-models/src/core_arch/arm_shared/: mod.rs
testable-simd-models/src/core_arch/arm_shared/models/: mod.rs  neon.rs
testable-simd-models/src/core_arch/arm_shared/tests/: mod.rs  neon.rs
testable-simd-models/src/core_arch/x86/: mod.rs
testable-simd-models/src/core_arch/x86/models/: avx.rs  avx2.rs  avx2_handwritten.rs  avx_handwritten.rs  mod.rs  sse.rs  sse2.rs  sse2_handwritten.rs  ssse3.rs  ssse3_handwritten.rs
testable-simd-models/src/core_arch/x86/tests/: avx.rs  avx2.rs  mod.rs  sse2.rs  ssse3.rs
tool_config/: kani-version.toml
verifast-proofs/alloc/raw_vec/mod.rs/verified/: raw_vec.rs
verifast-proofs/alloc/raw_vec/mod.rs/with-directives/: raw_vec.rs
